# rsfile

./: !!!!!native_io_concepts.rtf  .appveyor.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  Documentatin_rsfile32.rtf  License.txt  MANIFEST  MANIFEST.in  README.rst  README.txt  README_rsfile_1.0.txt  README_rsfile_1.1.txt  TODO_rsfile.txt  bugreport.rtf  changelog.txt  generate_coverage_report.py  pyproject.toml  setup.cfg  setup.py  tox.ini
doc/: Makefile  _readthedocs-requirements.txt  caveats.rst  conf.py  documentation_notes.txt  index.rst  locking_semantic.rst  make.bat  make.bat - Raccourci.lnk  native_io_concepts._rst  native_io_concepts.rst  rsModulesDiagram.ppt  rsfile.rst  rsfile_streams.rst  rsfileio.rst  rsopen.rst  streams.rst  utilities.rst  utilities_options.rst
doc/_static/: basic.css  default.css
misc/: README_rsfile_alpha1.txt  modern-package-template 1.0c1 released.eml  rsio.py  rsiobase.rst  setup.py  trunk_pyio.py
misc/Lockfile_folder_lock_poc/: README.txt  lock_test7.py  lockresultchecker.py
misc/cython/: hello.pyd  rsfile_registries.c  rsfile_registries.pxd
rsbackends/: _utilities.py  posix_defines.py  posix_stdlib.py  pywin32_ctypes.py  pywin32_extensions.py  raw_win32_ctypes.py  raw_win32_cython.c  raw_win32_defines.py  unix_defines.py  unix_stdlib.py
rsbackends/generators/: aaaa.txt  ctypes_codegen.html  generate_win32_ctypes.py  generate_win32_wrappers.py  tessss  windows.c  xml2ctypes.py  xml2cython.py
rsfile/: TODO.txt  __init__.py  abstract_fileio.py  rsfile.py  rsfile_defines.py  rsfile_definitions.py  rsfile_factories.py  rsfile_layers.py  rsfile_registries.py  rsfile_stream_layers.py  rsfile_streams.py  rsfile_utilities.py  rsfileio_abstract.py  rsfileio_unix.py  rsfileio_win32.py  rsfileio_windows.py  rsio.py  rsiobase.py  unix_fileio.py  win32_fileio.py
rsfile/rsbackend/: __init__.py  _utilities.py  pywin32_ctypes.py  pywin32_extensions.py  raw_unix_defines.py  raw_win32_ctypes.py  raw_win32_defines.py  unix_defines.py  unix_stdlib.py  windows_ctypes.py  windows_pywin32.py
rsfile/rstest/: __main__.py  _fd_inheritance_tester.py  _inheritance_tester.py  _utilities.py  _worker_process.py  run_iobench.py  test_backend_utilities.py  test_iobench.py  test_rsfile_locking.py  test_rsfile_retrocompatibility.py  test_rsfile_stdlib.py  test_rsfile_streams.py
rsfile/stdlib/: _io.py  (+1 more)
rsfs/: TODO.txt
rstest/: TEST.py  _inheritance_tester.py  _utilities.py  _workerProcess.py  _worker_process.py  test_iobench.py  test_rsFileIO.py  test_rsFileLocking.py  test_rsfile_locking.py  test_rsfile_streams.py  test_rsfileio.py  test_transaction_processor.py
rstransaction/: test_transaction_processor.py  transaction_processor.py  transactional_registries.py
src/: bug.py
test/: __inheritance_tester.py  __launch.py  _inheritance_tester.py  _workerProcess.py  test_rsFileIO.py  test_rsFileLocking.py  test_transaction_processor.py
(+72 files in other folders)
