[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RSFile"
version = "3.1"
authors = [
    {name = "Pascal Chambon", email = "pythoniks@gmail.com"},
]
description = "Advanced I/O file streams with fine-grained locking and creation options"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
]

#[tool.setuptools]
#packages = ["my_package"]

#[tool.setuptools.packages.find]
#where = ["src"]  # list of folders that contain the packages (["."] by default)
#include = ["rsfile*"]  # package names should match these glob patterns (["*"] by default)
#exclude = []  # exclude packages matching these glob patterns (empty by default)
#namespaces = false  # to disable scanning PEP 420 namespaces (true by default)