[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "RSFile"
version = "3.2"
authors = [
    {name = "Pascal Chambon", email = "pythoniks@gmail.com"},
]
description = "Advanced I/O file streams with fine-grained locking and creation options"
readme = "README.rst"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
]
dependencies = [
]

[project.urls]
Repository = "https://github.com/pakal/rsfile"
Documentation = "https://rsfile.readthedocs.io/"
